Fix #1272 CSS dropdown issue on ie 7/8

--- a/www/skins/login/less/skin.less
+++ b/www/skins/login/less/skin.less
@@ -354,7 +354,7 @@ ul {
 }
 
 #authentication-sidebar-language .caret {
-   margin:9px 0px  0px 7px;
+   margin:9px 0px 0px 7px;
    border-top-color: @languageCaretColor;
 }
 
@@ -834,8 +834,8 @@ form[name=registerForm] .multiselect-group {
 
 /** IE Fixes */
 
-.lt-ie8 authentication-sidebar-language .caret {
-   margin: 6px 0px  0px 7px;
+.lt-ie8 #authentication-sidebar-language .caret {
+   margin:0;
 }
 
 .lt-ie8 .inline li {
